# rust_mvc_template

./: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
entity/: Cargo.toml
migration/: Cargo.toml
public/: ui.css
resources/templates/: base.html  index.html
src/: main.rs
