[package]
name = "rust_mvc_template"
version = "0.1.0"
edition = "2021"
description = "A simple MVC template for Rust using Axum, SeaORM, Tera, TailwindCSS & htmlx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs

anyhow = "1.0.70"
axum = "0.6.17"
include_dir = "0.7.3"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
minijinja = { version = "0.32.1", features = ["builtins", "source"] }
minijinja-autoreload = "0.32.1"
serde = { version = "1.0.160", features = ["derive"] }
tera = "1"
tokio = { version = "1.28.0", features = ["full"] }
tower-livereload = "0.7.3"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid" ] }
dotenv = "0.15.0"
tower-http = {version = "0.4.0", features = ["fs"]}
